--- a/editor.html
+++ b/editor.html
@@ -270,6 +270,13 @@
                         <div class="only-shown only-shown-tool-Move"><i class="bi bi-arrows-move"></i></div>
                         <div class="only-shown only-shown-tool-Hand"><i class="bi bi-hand-index"></i></div>                        
                     </button>
+                    <div>
+                        <button type="button" class="btn btn-lg btn-outline-success only-shown only-shown-tool-Brush" data-bs-toggle="modal" data-bs-target="#modal-brush-config"><i class="bi bi-sliders"></i></button>
+                        <button type="button" class="btn btn-lg btn-outline-success only-shown only-shown-tool-Eraser" data-bs-toggle="modal" data-bs-target="#modal-eraser-config"><i class="bi bi-sliders"></i></button>
+                        <button type="button" class="btn btn-lg btn-outline-success only-shown only-shown-tool-Move" data-bs-toggle="modal" data-bs-target="#modal-layer-config"><i class="bi bi-sliders"></i></button>
+                        <button type="button" class="btn btn-lg btn-outline-success only-shown only-shown-tool-Hand" data-bs-toggle="modal" data-bs-target="#modal-document-config"><i class="bi bi-sliders"></i></button>
+                        
+                    </div>
                     <button type="button" class="btn btn-lg btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal-color-palette" id="btn-palette"><i class="bi bi-palette"></i></button>
                     <button type="button" class="btn btn-lg btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal-layers"><i class="bi bi-layers"></i></button>
                     <button type="button" class="btn btn-lg btn-outline-light" data-bs-toggle="button" onclick="wcApp.classList.toggle('show-wc-app-menu-propeties'); this.blur()"><i class="bi bi-sliders2"></i></button>
@@ -305,8 +312,7 @@
                         <!-- <button type="button" class="btn btn-md btn-outline-warning" onclick="editor?.document.history.save('manual')"><i class="bi bi-save2"></i></button> -->
                     </div>
                     <div class="wc-app-menu wc-app-menu-tool-propety  d-flex gap-1 px-1 py-1 justify-content-center mx-auto me-0">
-                        <button type="button" class="btn btn-md btn-success only-shown only-shown-tool-Brush" data-bs-toggle="modal" data-bs-target="#modal-brush-config" ><i class="bi bi-brush"></i> <i class="bi bi-sliders"></i></button>
-                        <button type="button" class="btn btn-md btn-success only-shown only-shown-tool-Eraser" data-bs-toggle="modal" data-bs-target="#modal-eraser-config" ><i class="bi bi-eraser"></i> <i class="bi bi-sliders"></i></button>                        
+                        <!-- 오른쪽하단 버튼 위치 -->
                     </div>
 
                 </div>
@@ -578,10 +584,6 @@
                             </div>
                         </form>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
-                    </div>
                 </div>
             </div>
         </div>
@@ -643,10 +645,6 @@
                             </div>
                         </form>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
-                    </div>
                 </div>
             </div>
         </div>
@@ -691,10 +689,6 @@
                             <textarea name="" rows="3" class="form-control" id="" oninput="if(editor.document.layer.setText !==undefined){editor.document.layer.setText(this.value);}" onfocus="if(editor.document.layer.text){ this.value=editor.document.layer.text}"></textarea>
                         </form>
 
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
                     </div>
                 </div>
             </div>
@@ -830,8 +824,8 @@
                                 }" onchange="return this.onsubmit(event)" onsubmit="this.oninput(event); editor.document.history.save(); return false;">
                                 <div class="input-group ui-input-stepper">
                                     <span class="input-group-text justify-content-center" style="width:6em" >Alpha</span>
-                                    <div class="form-control ui-input-stepper-data-value" data-value-suffix="%" onchange="editor.document.history.save()">
-                                        <input class="form-range d-block" type="range" name="alpha" placeholder="alpha" step="0.1" min="0" max="1" >
+                                    <div class="form-control ui-input-stepper ui-input-stepper-data-value" data-value-suffix="%" data-value-multipler="100" data-value-to-fixed="0"  onchange="editor.document.history.save()">
+                                        <input type="range" class="form-range m-0 d-block"name="alpha"  min="0" max="1" value="1" step="0.01" >
                                     </div>
                                 </div>
                             </form>
@@ -1084,8 +1078,8 @@
                                     <button type="button" class="btn btn-primary btn-stepper"data-stepper="up">+</button>
                                 </div>
                                 <div class="input-group">
-                                    <span class="input-group-text" >solidColor(단색)</span>
-                                    <select class="form-select " name="solidColor" id="" >
+                                    <span class="input-group-text" >makeOpaque(불투명하게)</span>
+                                    <select class="form-select " name="makeOpaque" id="" >
                                         <option selected value="false">NO</option>
                                         <option value="true">YES</option>
                                     </select>
@@ -1093,10 +1087,6 @@
 
                             </div>
                         </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
                     </div>
                 </div>
             </div>
@@ -1179,8 +1169,8 @@
                                     <button type="button" class="btn btn-primary btn-stepper"data-stepper="up">+</button>
                                 </div>
                                 <div class="input-group">
-                                    <span class="input-group-text" >solidColor(단색)</span>
-                                    <select class="form-select " name="solidColor" id="" >
+                                    <span class="input-group-text" >makeOpaque(불투명하게)</span>
+                                    <select class="form-select " name="makeOpaque" id="" >
                                         <option selected value="false">NO</option>
                                         <option value="true">YES</option>
                                     </select>
@@ -1188,10 +1178,6 @@
 
                             </div>
                         </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
                     </div>
                 </div>
             </div>
