--- a/editor.html
+++ b/editor.html
@@ -352,7 +352,7 @@
                                     <div class="fs-4"><i class="bi bi-file-earmark-plus"></i></div>
                                     <div>NEW</div>
                                 </button>
-                            </div>
+                            </div>                           
                             <div class="col-6">
                                 <button type="button" class="w-100 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#modal-file-open">
                                     <div class="fs-4"><i class="bi bi-file-earmark-arrow-up"></i></div>
@@ -365,6 +365,12 @@
                                     <div>SAVE</div>
                                 </button>
                             </div>
+                            <div class="col-6">
+                                <button type="button" class="w-100 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#modal-file-save">
+                                    <div class="fs-4"><i class="bi bi-cloud-upload"></i></div>
+                                    <div>UPLOAD</div>
+                                </button>
+                            </div>                            
                             <div class="col-6">
                                 <button type="button" class="w-100 btn btn-lg btn-primary" onclick="editor.closeDocument()">
                                     <div class="fs-4"><i class="bi bi-x-circle"></i></div>
